k11: Fix broken service calls
1) ExperimentService is not an OSGi service. Previous calls replaced
   with Finder.findSingleton
2) ILiveFileService implementation is actually declared an OSGi service
   as child interface ILiveLoadedFileService so using that instead.

Change-Id: I58aae00a06148e66c8dd775b2535122f716a8a6b